test(steps): add new step definitions grouped by entity